syntax = "proto3";

package com.ppdai.framework.raptor.proto;

import "common/Result.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/struct.proto";
import "google/protobuf/duration.proto";

service Simple {
    rpc sayHello (HelloRequest) returns (HelloReply) {
    }
}

message HelloRequest {
    string name = 1;
    enum Corpus {
        UNIVERSAL = 0;
        WEB = 1;
        IMAGES = 2;
        LOCAL = 3;
        NEWS = 4;
        PRODUCTS = 5;
        VIDEO = 6;
    }
    Corpus corpus = 2;
    repeated string snippets = 3;
    repeated Cat cats = 4;
    message Result {
        enum Corpus {
            UNIVERSAL = 0;
            WEB = 1;
            IMAGES = 2;
            LOCAL = 3;
            NEWS = 4;
            PRODUCTS = 5;
            VIDEO = 6;
        }
        string url = 1;
        Corpus corpus = 2;
    }
    Result result = 5;
    double tDouble = 6;
    float tFloat = 7;
    int32 tint32 = 8;
    int64 tint64 = 9;
    uint32 tunit32 = 10;
    uint64 tunit64 = 11;
    sint32 tsint32 = 12;
    sint64 tsint64 = 13;
    fixed32 tfixed32 = 14;
    fixed64 tfixed64 = 15;
    sfixed32 tsfixed32 = 16;
    sfixed64 tsfixed64 = 17;
    bytes tbytes = 18;
    bool tbool = 19;
    google.protobuf.Timestamp time = 20;
    google.protobuf.Struct struct = 21;
    google.protobuf.Value value = 22;
    google.protobuf.ListValue listValue = 23;
    google.protobuf.Duration duration = 24;
}

message HelloReply {
    string message = 1;
    HelloRequest.Corpus corpus = 2;
    repeated Result results = 3;
    int32 code =4 ;
}

message Cat {
    string color = 1;
}